# trace-xai

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
benchmarks/: benchmark.py
docs/: api_reference.md  getting_started.md  methodology.md  user_guide.md
examples/: credit_scoring.py  demo.py  demo_all_features.py  demo_complex.py  income_prediction.py
experiments/: check_deps.py  datasets.py  models.py  run_baseline.py  run_rq1.py  run_rq2.py  run_rq3.py  run_rq4.py  run_rq5.py  run_rq6_rq7.py  run_rq8.py  utils.py
paper/: trace_xai_arxiv.tex
results/: baseline_results.json  rq1_results.json  rq2_results.json  rq3_results.json  rq4_results.json  rq5_results.json  rq6_rq7_results.json  rq8_results.json
src/trace_xai/: __init__.py  augmentation.py  categorical.py  counterfactual.py  ensemble.py  explainer.py  html_export.py  mdl_selection.py  monotonicity.py  pruning.py  report.py  ruleset.py  stability.py  theoretical_bounds.py  visualization.py
src/trace_xai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trace_xai/surrogates/: __init__.py  decision_tree.py  gam.py  oblique_tree.py  sparse_oblique_tree.py
tests/: test_augmentation.py  test_categorical.py  test_counterfactual.py  test_ensemble.py  test_explainer.py  test_html_export.py  test_mdl_selection.py  test_monotonicity.py  test_new_features.py  test_pruning.py  test_regression.py  test_report.py  test_ruleset.py  test_sparse_oblique_tree.py  test_theoretical_bounds.py
tests_integration/: test_mdl_real.py  test_pipeline_e2e.py
tests_manual/: complex_multiclass_report.html  credit_scoring_report.html  credit_scoring_stable_report.html  multiclass_report.html  test_complex_multiclass.py  test_credit_scoring.py  test_multiclass.py
